# realsense_ros_gazebo

./: CMakeLists.txt  README.md  package.xml
cfg/: SensorModel.cfg
include/realsense_gazebo_plugin/: gazebo_ros_realsense.h
src/: RealSensePlugin.cpp  gazebo_ros_realsense.cpp
urdf/: test.xacro
xacro/: depthcam.xacro  tracker.xacro
