<?xml version="1.0"?>
<package format="3">

  <name>realsense_ros_gazebo</name>
  <version>1.2.0</version>

  <description>Intel Realsense Camera Simulations</description>

  <author email="sergey.dorodnicov@intel.com">Sergey Dorodnicov</author>
  <author email="doron.hirshberg@intel.com">Doron Hirshberg</author>
  <author email="marton@nowtech.hu">Marton Juhasz</author>

  <license>Apache 2.0</license>

  <maintainer email="marton@nowtech.hu">nilseuropa</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>camera_info_manager</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
